# macd

./: README.md  main.ipynb  pyproject.toml
