[tool.poetry]
name = "macd"
version = "0.1.0"
description = ""
authors = ["benisbuzz <ben@danziger.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
TA-Lib = "^0.4.28"
numpy = "^1.26.0"
yfinance = "^0.2.30"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
ipython = "^8.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
